Fix issue with wallpaper not covering entire window

--- a/infohub/src/App.sass
+++ b/infohub/src/App.sass
@@ -1,9 +1,6 @@
 div[data-reactroot]
   width: 100%
   height: 100%
-  min-height: 100vh
-  display: flex
-  justify-content: space-between
   flex-wrap: wrap
   overflow: hidden
 
@@ -16,7 +13,11 @@ div[data-reactroot]
 .home
   height: 100%
   width: 100%
+  min-height: 100vh
   position: relative
+  display: flex
+  justify-content: space-between
+  flex-wrap: wrap
   .background-image
     position: absolute
     width: 100%
