--- a/infohub/src/index.css
+++ b/infohub/src/index.css
@@ -1,8 +1,8 @@
 body {
   margin: 0;
   padding: 0;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   font-family: "Helvetica Neue", sans-serif;
   background-image: url('images/background.jpg');
 }
